# IT-copying

./: .gitignore  pyproject.toml  slurm-7276112.out
configs/: arxiv_sampled_idx.txt  bbc_sampled_idx.txt  generate_default.gin
scripts/: generate_olmo_7b.sh
src/: generate.py  hello.py  sample_prompts.py  utils.py
src/.ipynb_checkpoints/: explore-checkpoint.ipynb
